# analog_synth

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  ARCHITECTURE.en.md  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.en.md  README.md  SPEC.md
.github/workflows/: release.yml
Resources/Icons/: generate_app_icon.py
Source/: AdsrEnvelope.h  AppState.cpp  AppState.h  EnvelopePlayhead.cpp  EnvelopePlayhead.h  GlobalLfo.h  HelpStrings.h  Main.cpp  PresetManager.cpp  PresetManager.h  SynthEditor.cpp  SynthEditor.h  SynthParameters.h  SynthSound.cpp  SynthSound.h  SynthVoice.cpp  SynthVoice.h  Waveform.h
Source/UI/: AdsrDisplay.cpp  AdsrDisplay.h  FuturisticLookAndFeel.cpp  FuturisticLookAndFeel.h  LfoRateLed.cpp  LfoRateLed.h  ModulePanel.cpp  ModulePanel.h  PcKeyboardDisplay.cpp  PcKeyboardDisplay.h  SubOctGroupFrame.h  SynthTheme.h  TransposeControl.cpp  TransposeControl.h  TrebleStaffDisplay.cpp  TrebleStaffDisplay.h  WaveformButton.cpp  WaveformButton.h
